--- a/a1/CMakeLists.txt
+++ b/a1/CMakeLists.txt
@@ -1,3 +1,14 @@
 cmake_minimum_required(VERSION 2.8)
 
+set(NG_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
+set(NG_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
+
 add_subdirectory(src)
+
+# Add headers to project for completeness
+file(GLOB_RECURSE INTERFACE_FILES
+    include/**.hpp)
+
+add_library(HEADER_ONLY_TARGET STATIC ${INTERFACE_FILES})
+set_target_properties(HEADER_ONLY_TARGET PROPERTIES LINKER_LANGUAGE CXX)
+
