--- a/a1/src/ng/app/CMakeLists.txt
+++ b/a1/src/ng/app/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 set(SOURCES
     main.cpp)
 
-include_directories(${NG_DIRECTORY})
+include_directories(${NG_INCLUDE_DIR} ${NG_SRC_DIR})
 
 add_executable(app ${SOURCES})
 target_link_libraries(app engine)
