hid all the ugly stuff

--- a/a1/src/ng/engine/CMakeLists.txt
+++ b/a1/src/ng/engine/CMakeLists.txt
@@ -2,9 +2,14 @@ cmake_minimum_required(VERSION 2.6)
 
 project(engine CXX)
 
-find_package(X11 REQUIRED)
+option(NG_USE_X11 "Use X11 for window creation" ON)
+
 find_package(OpenGL REQUIRED)
-find_package(Threads REQUIRED)
+
+if(NG_USE_X11)
+    find_package(X11 REQUIRED)
+    find_package(Threads REQUIRED)
+endif()
 
 if(UNIX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -16,13 +21,18 @@ file(GLOB COMMON_SOURCES
 file(GLOB_RECURSE X11_SOURCES
     x11/**.cpp x11/**.hpp)
 
-if(UNIX AND NOT APPLE)
-    set(SOURCES
-        ${COMMON_SOURCES}
-        ${X11_SOURCES})
+set(SOURCES ${COMMON_SOURCES})
+set(LIBS ${OPENGL_LIBRARIES})
+
+if(NG_USE_X11)
+    set(SOURCES ${SOURCES} ${X11_SOURCES})
+    set(LIBS ${LIBS} ${X11_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+    add_definitions(-DNG_USE_X11)
+else()
+    nessage(FATAL_ERROR "Unsupported configuration")
 endif()
 
 include_directories(${NG_INCLUDE_DIR} ${NG_SRC_DIR})
 
 add_library(engine ${SOURCES})
-target_link_libraries(engine ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(engine ${LIBS})
