--- a/a1/src/ng/engine/CMakeLists.txt
+++ b/a1/src/ng/engine/CMakeLists.txt
@@ -12,7 +12,7 @@ if(NG_USE_X11)
 endif()
 
 if(UNIX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 endif()
 
 file(GLOB COMMON_SOURCES
