--- a/src/ng/framework/CMakeLists.txt
+++ b/src/ng/framework/CMakeLists.txt
@@ -2,12 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 
 project(framework CXX)
 
-if(UNIX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")
-endif()
-
 file(GLOB_RECURSE SOURCES
-    *.cpp *.hpp)
+    **.cpp **.hpp)
 
 include_directories(${NG_INCLUDE_DIR} ${NG_SRC_DIR})
 
