lots of hacking to make emscripten get closer to working

--- a/src/ng/CMakeLists.txt
+++ b/src/ng/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
 
-if(UNIX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wstrict-aliasing=2 -fstrict-aliasing -std=c++11")
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    set(CMAKE_GNU_CXX_FLAGS "-Wall -Wextra -Wstrict-aliasing=2 -fstrict-aliasing -std=c++11")
+    set(CMAKE_CXX_FLAGS ${CMAKE_GNU_CXX_FLAGS} ${CMAKE_CXX_FLAGS})
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    set(CMAKE_CLANG_CXX_FLAGS "-stdlib=libc++ -std=c++11")
+    set(CMAKE_CXX_FLAGS ${CMAKE_CLANG_CXX_FLAGS} ${CMAKE_CXX_FLAGS})
 endif()
 
 add_subdirectory(engine)
