working on renderbatch interface

--- a/src/ng/framework/CMakeLists.txt
+++ b/src/ng/framework/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 2.6)
 
-project(a4 CXX)
+project(framework CXX)
 
 file(GLOB_RECURSE SOURCES
-    **.cpp)
+    **.cpp **.hpp)
 
 include_directories(${NG_INCLUDE_DIR} ${NG_SRC_DIR})
 
-add_executable(a4 ${SOURCES})
-target_link_libraries(a4 engine framework)
+add_library(framework ${SOURCES})
+target_link_libraries(framework engine)
