work on subdivision (+various improvements)

--- a/src/ng/a3/CMakeLists.txt
+++ b/src/ng/a3/CMakeLists.txt
@@ -8,7 +8,8 @@ file(GLOB_RECURSE SOURCES
 set(ASSETS
     bunny.obj
     cube.obj
-    teapot.obj)
+    teapot.obj
+    donut.obj)
 
 set_source_files_properties(${ASSETS} PROPERTIES HEADER_FILE_ONLY TRUE)
 
