added and hooked up placeholder animation

--- a/src/ng/a4/CMakeLists.txt
+++ b/src/ng/a4/CMakeLists.txt
@@ -9,7 +9,8 @@ include_directories(${NG_INCLUDE_DIR} ${NG_SRC_DIR})
 
 set(ASSETS
     robotarm.obj
-    robotarm.md5mesh)
+    robotarm.md5mesh
+    robotarm.md5anim)
 
 set_source_files_properties(${ASSETS} PROPERTIES HEADER_FILE_ONLY TRUE)
 
